# rust-book

./: .env  Cargo.toml  a.txt
src/: Week27.rs  Week28.rs  Week29.rs  Week30.rs  controlFlow.rs  io array1.rs
src/rustling/exercise1/: function.rs  if.rs  main.rs  move_semsentioc.rs  primitive.rs  variable.rs  vector.rs
