[package]
name = "Rust"
version = "0.1.0"
edition = "2024"

[dependencies]
borsh = { version = "1.5", features = ["derive"]}
cargo-expand = "1.0.114"
chrono = "0.4.41"
dotenv = "0.15.0" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "exercise1"
path = "src/rustling/exercise1/main.rs"

[[bin]]
name = "project2"
path = "src/project2/main.rs"
